--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "maciejslawik/php-coding-standards",
-  "description": "Custom PHP CS Rules",
+  "name": "gallinago/php-coding-standards",
+  "description": "Custom PHP CS Rules by Gallinago",
   "require": {
     "php": "^7",
     "squizlabs/php_codesniffer": "^3.0"
